# SLD_Builder

./: .gitignore  README.md  exe_build_conf.json  inserting_block.py  inserting_dynamic_block.py  main.py  main_gui.py  make_py_from_ui.bat  pyproject.toml  qt_export_qt6.py  requirements.txt  sld_builder.ui  План проекта.docx
.myvenv/: pyvenv.cfg
.myvenv/Scripts/: activate  activate.bat  bottle.py  futurize-script.py  pasteurize-script.py
.pyacadcom_source/pyautocad-master/: Документация.url
.pyacadcom_source/pyautocad-master/examples/: cable_tables_to_csv.py
.test_code/: deleting_selected_blocks copy.py  deleting_selected_blocks.py  inserting_block.py  inserting_dynamic_block.py  read_excel_groups.py
releases/: changelog.MD
templates/: DB_NAME_(discription)_v1.5_EN.xlsx  DB_NAdata_v1.5.xlsx  MDB.bak  MDB.dwg  MDB_template.bak  MDB_template.dwg  SLD_template.dwg  SLD_template.dwl  SLD_template.dwl2  SLD_template_EN.dwg
test_files/: DB_имя щита_(как хотите)_v1.5.xlsx  PanelTemplate.xlsx  SLD_full.dwg  SLD_template.bak  SLD_template.dwg  test_panel.bak  test_panel.dwg
